--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,19 +1,18 @@
 <div class="container">
-    <h1>login</h1>
-    <div class="container">
+    <div class="container" data-ng-if="!isLogged">
         <form class="form-signin">
             <h2 class="form-signin-heading">Please sign in</h2>
             <label class="sr-only" for="inputEmail">Email address</label>
-            <input id="user" class="form-control" type="login" autofocus="" required="" placeholder="Email address" data-ng-model="loginCtrl.username">
+            <input id="user" class="form-control" type="text" autofocus="" required="" placeholder="Email address" data-ng-model="LoginCtrl.username">
             <label class="sr-only" for="inputPassword">Password</label>
-            <input id="password" class="form-control" type="password" required="" placeholder="Password" data-ng-model="loginCtrl.password">
+            <input id="password" class="form-control" type="password" required="" placeholder="Password" data-ng-model="LoginCtrl.password">
             <div class="checkbox">
                 <label>
-                    <input type="checkbox" value="remember-me" data-ng-model="loginCtrl.rememberMe">
+                    <input type="checkbox" value="remember-me" data-ng-model="LoginCtrl.rememberMe">
                     Remember me
                 </label>
             </div>
-            <button class="btn btn-lg btn-primary btn-block" type="submit" data-ng-click="loginCtrl.postLogin()">Sign in</button>
+            <button class="btn btn-lg btn-primary btn-block" type="submit" data-ng-click="LoginCtrl.postLogin()">Sign in</button>
         </form>
     </div>
 </div>
