--- a/src/index.less
+++ b/src/index.less
@@ -156,3 +156,26 @@
   .nav-collapse { width: 18em }
   .main { width: auto; left: 18em }
 }
+
+.element-container {
+  border-radius: 10px;
+  border: 2px solid;
+  margin: 5px;
+  padding: 10px;
+}
+
+.element-label {
+  font-weight: bold;
+  font-size: 14px;
+  text-overflow: ellipsis; 
+  white-space: nowrap; 
+  overflow: hidden;
+}
+
+.element-disabled {
+  font-style: italic;
+}
+
+.modal-input-text {
+  width: 100%;
+}
