--- a/src/app/parameters/parameters.html
+++ b/src/app/parameters/parameters.html
@@ -1,6 +1,10 @@
 <div class="container">
     <h1>Parameters</h1>
     
+    <h2>Admin mode</h2>
+    <div>
+        <input data-toggle="toggle" data-bs-switch data-switch-size="mini" type="checkbox" data-ng-model="ParametersCtrl.sagremorParams.adminMode">
+    </div>
     <h2>Benoic devices list</h2>
     <button type="button" data-ng-click="ParametersCtrl.addDevice()" class="btn">
         <i class="fa fa-plus" aria-hidden="true"></i>
