--- a/src/components/switch/switch.template.html
+++ b/src/components/switch/switch.template.html
@@ -1,9 +1,18 @@
-<div class="col-md-4">
-    <span>{{$ctrl.switcher.display}}</span>
-    <input type="checkbox" 
-            data-bs-switch 
-            data-toggle="toggle" 
-            data-switch-size="mini" 
-            data-ng-model="$ctrl.switcher.value" 
-            data-ng-change="$ctrl.toggleSwitcher($ctrl.switcher)">
+<div class="col-md-1 element-container" data-ng-if="$ctrl.switcher.enabled || $ctrl.adminMode">
+    <div class="text-center" data-ng-class="{'text-italic': $ctrl.adminMode}">
+        <input type="checkbox" 
+                data-bs-switch 
+                data-toggle="toggle" 
+                data-switch-size="mini" 
+                data-ng-model="$ctrl.switcher.valueChecked" 
+                data-ng-change="$ctrl.toggleSwitcher()">
+    </div>
+    <div class="text-center element-label" data-ng-class="{'element-disabled': $ctrl.adminMode && !$ctrl.switcher.enabled}">
+        <span>{{$ctrl.switcher.display}}</span>
+    </div>
+    <div data-ng-if="$ctrl.adminMode">
+        <button type="button" class="btn" data-ng-click="$ctrl.editSwitcher()">
+            <i class="fa fa-pencil" aria-hidden="true"></i>
+        </button>
+    </div>
 </div>
