--- a/src/components/switch/switch.template.html
+++ b/src/components/switch/switch.template.html
@@ -1,4 +1,4 @@
-<div class="col-md-1 element-container" data-ng-if="$ctrl.switcher.enabled || $ctrl.adminMode">
+<div class="col-md-1 element-container" data-ng-if="$ctrl.switcher.enabled || $ctrl.adminMode" data-context-menu="$ctrl.menu">
     <div class="text-center" data-ng-class="{'text-italic': $ctrl.adminMode}">
         <input type="checkbox" 
                 data-bs-switch 
