--- a/src/index.less
+++ b/src/index.less
@@ -157,6 +157,10 @@
   .main { width: auto; left: 18em }
 }
 
+.left-menu {
+  margin-left: 5px;
+}
+
 .element-container {
   border-radius: 10px;
   border: 2px solid;
@@ -178,4 +182,16 @@
 
 .modal-input-text {
   width: 100%;
+}
+
+.css-form input {
+  box-shadow: 0 0 3px blue;
+}
+
+.css-form input.ng-invalid.ng-touched {
+  box-shadow: 0 0 3px red;
+}
+
+.css-form input.ng-valid.ng-touched {
+  box-shadow: 0 0 3px green;
 }
