--- a/src/app/parameters/parameters.html
+++ b/src/app/parameters/parameters.html
@@ -1,87 +1,133 @@
 <div class="container">
-    <h1>Parameters</h1>
+    <h1 data-translate="parameters_title"></h1>
     
-    <h2>Admin mode</h2>
-    <div>
-        <input data-toggle="toggle" data-bs-switch data-switch-size="mini" type="checkbox" data-ng-model="ParametersCtrl.sagremorParams.adminMode">
+    <h3 data-translate="param_admin_global"></h3>
+    <div class="container">
+      <div class="row">
+          <div class="col-md-2">
+              <label for="admin-mode" data-translate="param_admin_mode"></label>
+          </div>
+          <div class="col-md-2">
+              <input id="admin-mode" name="admin-mode" data-toggle="toggle" data-bs-switch data-switch-size="mini" type="checkbox" data-ng-model="ParametersCtrl.sagremorParams.adminMode">
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-md-2">
+              <label for="app-lang" data-translate="param_app_lang"></label>
+          </div>
+          <div class="col-md-2">
+              <select data-ng-model="ParametersCtrl.selectedLang" data-ng-options="lang.name as lang.display for lang in ParametersCtrl.langList" data-ng-change="ParametersCtrl.changeLang()"></select>
+          </div>
+      </div>
     </div>
-    <h2>Benoic devices list</h2>
-    <button type="button" data-ng-click="ParametersCtrl.addDevice()" class="btn">
-        <i class="fa fa-plus" aria-hidden="true"></i>
-    </button>
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Type</th>
-                <th>Connected</th>
-                <th>Enabled</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr data-ng-if="ParametersCtrl.deviceAdded">
-                <td><input type="text" data-ng-model="ParametersCtrl.newDeviceName"></td>
-                <td><input type="text" data-ng-model="ParametersCtrl.newDeviceDescription"></td>
-                <td>
-                    <select data-ng-model="ParametersCtrl.newDeviceType" data-ng-options="device.uid as device.name for device in ParametersCtrl.deviceTypes" data-ng-change="ParametersCtrl.setDeviceOptions()"></select>
-                    <button type="button" class="btn" data-ng-click="ParametersCtrl.setDeviceOptions()" data-ng-enabled="!!ParametersCtrl.newDeviceType">
-                        <i class="fa fa-cog" aria-hidden="true"></i>
-                    </button>
-                </td>
-                <td>
-                    <input data-toggle="toggle" type="checkbox" data-ng-model="ParametersCtrl.newDeviceConnect">
-                </td>
-                <td></td>
-                <td>
-                    <button type="button" class="btn" data-ng-click="ParametersCtrl.postNewDevice()">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                    </button>
-                    <button type="button" class="btn" data-ng-click="ParametersCtrl.cancelNewDevice()">
-                        <i class="fa fa-times" aria-hidden="true"></i>
-                    </button>
-                </td>
-            </tr>
-            <tr data-ng-if="ParametersCtrl.deviceAdded && ParametersCtrl.deviceOptionListDisplay" data-ng-repeat="(optionName, option) in ParametersCtrl.deviceOptionList track by optionName">
-                <td></td>
-                <td>{{option.description}}</td>
-                <td data-ng-if="option.type !== 'boolean'"><input type="text" data-ng-model="option.value"></td>
-                <td data-ng-if="option.type === 'boolean'"><label class="checkbox-inline"><input data-toggle="toggle" type="checkbox" data-ng-model="option.value"></label></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr data-ng-if="!ParametersCtrl.deviceAdded" 
-                data-ng-repeat="(name, device) in ParametersCtrl.deviceList track by name" 
-                data-ng-class="{'device-disabled': !device.enabled}">
-                <td>{{device.name}}</td>
-                <td data-ng-if="!device.update">{{device.description}}</td>
-                <td data-ng-if="device.update"><input type="text" name="deviceDesc" id="deviceDesc" data-ng-model="device.newDescription" value="{{device.newDescription}}"></td>
-                <td>{{device.type_uid | deviceTypeName}}</td>
-                <td>
-                    <input data-toggle="toggle" data-bs-switch data-switch-size="mini" type="checkbox" data-ng-model="device.connected" data-ng-change="ParametersCtrl.connectDevice(device)">
-                </td>
-                <td>
-                    <input data-toggle="toggle" data-bs-switch data-switch-size="mini" type="checkbox" data-ng-model="device.enabled" data-ng-change="ParametersCtrl.enableDevice(device)">
-                </td>
-                <td data-ng-if="!device.update">
-                    <button type="button" class="btn" data-ng-click="ParametersCtrl.editDevice(device)">
-                        <i class="fa fa-pencil" aria-hidden="true"></i>
-                    </button>
-                    <button type="button" class="btn" data-ng-click="ParametersCtrl.removeDevice(device)">
-                        <i class="fa fa-trash" aria-hidden="true"></i>
-                    </button>
-                </td>
-                <td data-ng-if="device.update">
-                    <button type="button" class="btn" data-ng-click="ParametersCtrl.saveDevice(device)">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                    </button>
-                    <button type="button" class="btn" data-ng-click="ParametersCtrl.cancelEditDevice(device)">
-                        <i class="fa fa-times" aria-hidden="true"></i>
-                    </button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <h3 data-translate="param_submodule_title"></h3>
+    <div class="container">
+      <div class="row">
+          <div class="col-md-2">
+              <label for="submodule-benoic" data-translate="param_submodule_benoic"></label>
+          </div>
+          <div class="col-md-2">
+              <input data-ng-change="ParametersCtrl.submoduleEnable('benoic')" id="submodule-benoic" name="submodule-benoic" data-toggle="toggle" data-bs-switch data-switch-size="mini" type="checkbox" data-ng-model="ParametersCtrl.submodules.benoic.enabled">
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-md-2">
+              <label for="submodule-carleon" data-translate="param_submodule_carleon"></label>
+          </div>
+          <div class="col-md-2">
+              <input data-ng-change="ParametersCtrl.submoduleEnable('carleon')" id="submodule-carleon" name="submodule-carleon" data-toggle="toggle" data-bs-switch data-switch-size="mini" type="checkbox" data-ng-model="ParametersCtrl.submodules.carleon.enabled">
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-md-2">
+              <label for="submodule-gareth" data-translate="param_submodule_gareth"></label>
+          </div>
+          <div class="col-md-2">
+              <input data-ng-change="ParametersCtrl.submoduleEnable('gareth')" id="submodule-gareth" name="submodule-gareth" data-toggle="toggle" data-bs-switch data-switch-size="mini" type="checkbox" data-ng-model="ParametersCtrl.submodules.gareth.enabled">
+          </div>
+      </div>
+    </div>
+    <h3 data-translate="param_device_list"></h2>
+    <form name="deviceList" class="css-form">
+      <button type="button" data-ng-click="ParametersCtrl.addDevice()" class="btn">
+          <i class="fa fa-plus" aria-hidden="true"></i>
+      </button>
+      <table class="table table-hover">
+          <thead>
+              <tr>
+                  <th data-translate="device_name"></th>
+                  <th data-translate="device_description"></th>
+                  <th data-translate="device_type"></th>
+                  <th data-translate="device_connected"></th>
+                  <th data-translate="device_enabled"></th>
+                  <th data-translate="device_action"></th>
+              </tr>
+          </thead>
+          <tbody>
+              <tr data-ng-repeat="(name, device) in ParametersCtrl.deviceList track by name" 
+                  data-ng-class="{'device-disabled': !device.enabled}">
+                  <td>{{device.name}}</td>
+                  <td data-ng-if="!device.update">{{device.description}}</td>
+                  <td data-ng-if="device.update"><input type="text" name="deviceDesc" id="deviceDesc" data-ng-model="device.newDescription" value="{{device.newDescription}}"></td>
+                  <td>{{device.type_uid + '_device_type' | translate}}</td>
+                  <td>
+                      <input data-toggle="toggle" data-bs-switch data-switch-size="mini" type="checkbox" data-ng-model="device.connected" data-ng-change="ParametersCtrl.connectDevice(device)">
+                  </td>
+                  <td>
+                      <input data-toggle="toggle" data-bs-switch data-switch-size="mini" type="checkbox" data-ng-model="device.enabled" data-ng-change="ParametersCtrl.enableDevice(device)">
+                  </td>
+                  <td data-ng-if="!device.update">
+                      <button type="button" class="btn" data-ng-click="ParametersCtrl.editDevice(device)">
+                          <i class="fa fa-pencil" aria-hidden="true"></i>
+                      </button>
+                      <button type="button" class="btn" data-ng-click="ParametersCtrl.removeDevice(device)">
+                          <i class="fa fa-trash" aria-hidden="true"></i>
+                      </button>
+                  </td>
+                  <td data-ng-if="device.update">
+                      <button type="button" class="btn" data-ng-click="ParametersCtrl.saveDevice(device)">
+                          <i class="fa fa-check" aria-hidden="true"></i>
+                      </button>
+                      <button type="button" class="btn" data-ng-click="ParametersCtrl.cancelEditDevice(device)">
+                          <i class="fa fa-times" aria-hidden="true"></i>
+                      </button>
+                  </td>
+              </tr>
+              <tr data-ng-if="ParametersCtrl.deviceAdded">
+                  <td><input type="text" data-ng-model="ParametersCtrl.newDeviceName" data-ng-required data-ng-maxlength="64" maxlength="64"></td>
+                  <td><input type="text" data-ng-model="ParametersCtrl.newDeviceDescription" data-ng-maxlength="128" maxlength="128"></td>
+                  <td>
+                      <select data-ng-required data-ng-model="ParametersCtrl.newDeviceType" data-ng-options="device.uid as device.translate for device in ParametersCtrl.deviceTypes" data-ng-change="ParametersCtrl.setDeviceOptions()"></select>
+                  </td>
+                  <td>
+                      <input data-toggle="toggle" data-bs-switch data-switch-size="mini" type="checkbox" data-ng-model="ParametersCtrl.newDeviceConnect">
+                  </td>
+                  <td></td>
+                  <td>
+                      <button type="button" class="btn" data-ng-click="ParametersCtrl.postNewDevice()" data-ng-disabled="!ParametersCtrl.isDeviceValid()">
+                          <i class="fa fa-check" aria-hidden="true"></i>
+                      </button>
+                      <button type="button" class="btn" data-ng-click="ParametersCtrl.cancelNewDevice()">
+                          <i class="fa fa-times" aria-hidden="true"></i>
+                      </button>
+                  </td>
+              </tr>
+          </tbody>
+      </table>
+      <h3 data-ng-if="ParametersCtrl.deviceAdded && ParametersCtrl.deviceOptionListDisplay" data-translate="device_options_title"></h3>
+      <div data-ng-if="ParametersCtrl.deviceAdded && ParametersCtrl.deviceOptionListDisplay" data-ng-repeat="(optionName, option) in ParametersCtrl.deviceOptionList track by optionName" class="container">
+          <div class="row">
+              <div class="col-md-3" data-ng-class="{'device-option-required': !option.optional}">{{ParametersCtrl.newDeviceType + "_" + option.name | translate}}</div>
+              <div class="col-md-3" data-ng-if="option.type === 'string'">
+                  <input type="text" data-ng-model="option.value" data-ng-required="!option.optional">
+              </div>
+              <div class="col-md-3" data-ng-if="option.type === 'numeric'">
+                  <input type="number" data-ng-model="option.value" data-ng-required="!option.optional">
+              </div>
+              <div class="col-md-3" data-ng-if="option.type === 'boolean'">
+                  <input data-toggle="toggle" type="checkbox" data-ng-model="option.value" data-ng-required="!option.optional">
+              </div>
+          </div>
+      </div>
+    </form>
 </div>
