--- a/src/app/switches/switches.html
+++ b/src/app/switches/switches.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>Switches</h1>
+    <h1 data-translate="switches_title"></h1>
     
     <div class="row">
         <div data-ng-repeat="switcher in switchesCtrl.switchList">
