--- a/src/components/confirm/confirm.modal.html
+++ b/src/components/confirm/confirm.modal.html
@@ -4,7 +4,7 @@
         <h3 class="modal-title">{{ConfirmModalCtrl.title}}</h3>
     </div>
     <div class="modal-body">
-        <div class="row">
+        <div class="row" style="margin: 5px;">
             <span>{{ConfirmModalCtrl.message}}</span>
         </div>
     <div class="modal-footer">
