--- a/src/components/dimmer/dimmer.less
+++ b/src/components/dimmer/dimmer.less
@@ -19,6 +19,7 @@
     text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff;
     cursor: pointer;
 }
+
 .quarter {
 	position:absolute;
 	width:50%;
@@ -26,13 +27,22 @@
 	transition:background-color 0.2s ease-in-out;
     cursor: pointer;
 }
-.quarter:hover {
-	background-color:pink;
+
+.quarter-off {
+	background-color:blue;
 }
+
+.quarter-on {
+	background-color:yellow;
+}
+
+.quarter:hover {
+	background-color:blue;
+}
+
 .quarter1 {
 	top:0;
 	left:0;
-	background-color:blue;
 	border-radius:100% 0 0 0;
     border-color: white;
     border-style: solid;
@@ -40,7 +50,6 @@
 .quarter2 {
 	top:0;
 	right:0;
-	background-color:blue;
 	border-radius:0 100% 0 0 ;
     border-color: white;
     border-style: solid;
@@ -48,7 +57,6 @@
 .quarter3 {
 	bottom:0;
 	left:0;
-	background-color:blue;
 	border-radius:0 0 0 100%;
     border-color: white;
     border-style: solid;
@@ -56,7 +64,6 @@
 .quarter4 {
 	bottom:0;
 	right:0;
-	background-color:blue;
 	border-radius:0 0 100% 0 ;
     border-color: white;
     border-style: solid;
