--- a/src/app/switches/switches.html
+++ b/src/app/switches/switches.html
@@ -11,7 +11,22 @@
     <h2 data-translate="dimmer_title"></h2>
     <div class="row">
         <div data-ng-repeat="dimmer in switchesCtrl.dimmerList">
-            <data-sag-dimmer data-dimmer="dimmer"></data-sag-dimmer>
+            <data-sag-container data-menu="switchesCtrl.menu3"
+                                data-size="3">
+                <data-sag-dimmer data-dimmer="dimmer"></data-sag-dimmer>
+            </data-sag-container>
         </div>
     </div>
+    
+    <h2>Containers test</h2>
+    <data-sag-container data-menu="switchesCtrl.menu1"
+                        data-size="1">
+    </data-sag-container>
+    <data-sag-container data-menu="switchesCtrl.menu2"
+                        data-size="2">
+    </data-sag-container>
+    <data-sag-container data-menu="switchesCtrl.menu3"
+                        data-size="3">
+        toto
+    </data-sag-container>
 </div>
