--- a/src/app/heaters/heaters.html
+++ b/src/app/heaters/heaters.html
@@ -1,3 +1,14 @@
 <div class="container">
-    <h1>Heaters</h1>
+    <h1 data-translate="heaters_title"></h1>
+    
+    <div class="row">
+        <div data-ng-repeat="heater in heatersCtrl.heaterList">
+            <data-sag-container data-menu="heatersCtrl.menuSensor"
+                                data-size="1"
+                                data-title="heater.display"
+                                data-element="heater">
+				<data-sag-heater data-heater="heater"></data-sag-heater>
+			</data-sag-container>
+        </div>
+    </div>
 </div>
