--- a/src/app/switches/switches.html
+++ b/src/app/switches/switches.html
@@ -4,29 +4,24 @@
     <h2 data-translate="switch_title"></h2>
     <div class="row">
         <div data-ng-repeat="switcher in switchesCtrl.switchList">
-            <data-sag-switch data-switcher="switcher"></data-sag-switch>
+            <data-sag-container data-menu="switchesCtrl.menuSwitcher"
+                                data-size="1"
+                                data-title="switcher.display"
+                                data-element="switcher">
+				<data-sag-switch data-switcher="switcher"></data-sag-switch>
+			</data-sag-container>
         </div>
     </div>
     
     <h2 data-translate="dimmer_title"></h2>
     <div class="row">
         <div data-ng-repeat="dimmer in switchesCtrl.dimmerList">
-            <data-sag-container data-menu="switchesCtrl.menu3"
-                                data-size="3">
+            <data-sag-container data-menu="switchesCtrl.menuDimmer"
+                                data-size="1"
+                                data-title="dimmer.display"
+                                data-element="dimmer">
                 <data-sag-dimmer data-dimmer="dimmer"></data-sag-dimmer>
             </data-sag-container>
         </div>
     </div>
-    
-    <h2>Containers test</h2>
-    <data-sag-container data-menu="switchesCtrl.menu1"
-                        data-size="1">
-    </data-sag-container>
-    <data-sag-container data-menu="switchesCtrl.menu2"
-                        data-size="2">
-    </data-sag-container>
-    <data-sag-container data-menu="switchesCtrl.menu3"
-                        data-size="3">
-        toto
-    </data-sag-container>
 </div>
