--- a/src/components/dimmer/dimmer.template.html
+++ b/src/components/dimmer/dimmer.template.html
@@ -1,8 +1,5 @@
-<div class="col-sm-2 element-container" data-ng-if="$ctrl.dimmer.enabled || $ctrl.adminMode" data-context-menu="$ctrl.menu">
+<div data-ng-if="$ctrl.dimmer.enabled || $ctrl.adminMode">
     <div class="text-center" data-ng-class="{'text-italic': $ctrl.adminMode}">
-        <span class="text-left element-label" 
-              data-ng-class="{'element-disabled': $ctrl.adminMode && !$ctrl.dimmer.enabled}">{{$ctrl.dimmer.display}} : 
-        </span>
         <div class="ring">
             <div class="quarter quarter1" 
 				 data-ng-click="$ctrl.setDimmer(100)"
@@ -26,13 +23,5 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="text-center" data-ng-if="$ctrl.adminMode">
-        <button type="button" class="btn" data-ng-click="$ctrl.editDimmer()">
-            <i class="fa fa-pencil" aria-hidden="true"></i>
-        </button>
-        <button type="button" class="btn" data-ng-click="$ctrl.monitorDimmer()">
-            <i class="fa fa-line-chart" aria-hidden="true"></i>
-        </button>
     </div>
 </div>
