Add top right menu

--- a/src/components/container/container.less
+++ b/src/components/container/container.less
@@ -1,19 +1,19 @@
 .sag-container-header {
 	width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; 
 }
 
-.sag-container-header button {
-	
+.sag-container-header ul {
+    z-index:1000;
+    position:absolute;
 }
 
 .sag-container-header span {
 	font-weight: bold;
 	padding-left: 10px;
 	padding-right: 10px;
-	
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
 }
 
 .sag-container {
