--- a/src/components/container/container.less
+++ b/src/components/container/container.less
@@ -1,16 +1,13 @@
-.sag-container-header {
-	width: 100%;
+.sag-container-header-menu {
+}
+
+.sag-container-header-title {
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis; 
+    text-overflow: ellipsis;
 }
 
-.sag-container-header ul {
-    z-index:1000;
-    position:absolute;
-}
-
-.sag-container-header span {
+.sag-container-header-title span {
 	font-weight: bold;
 	padding-left: 10px;
 	padding-right: 10px;
