--- a/src/app/sensors/sensors.html
+++ b/src/app/sensors/sensors.html
@@ -6,7 +6,8 @@
             <data-sag-container data-menu="sensorsCtrl.menuSensor"
                                 data-size="1"
                                 data-title="sensor.display"
-                                data-element="sensor">
+                                data-element="sensor"
+                                data-ng-if="sensor.enabled || sensorsCtrl.sagremorParams.adminMode">
 				<data-sag-sensor data-sensor="sensor"></data-sag-sensor>
 			</data-sag-container>
         </div>
