--- a/src/app/dashboard/dashboard.less
+++ b/src/app/dashboard/dashboard.less
@@ -3,3 +3,12 @@
 .container h1 {
     color: @titleColor;
 }
+
+.grid1 {
+    background: #c6ecf1;
+}
+.grid-stack-item-content {
+    color: #2c3e50;
+    text-align: center;
+    background-color: #732145;
+}
