--- a/src/index.less
+++ b/src/index.less
@@ -8,161 +8,14 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-overflow-scrolling: touch;
-  padding: 3em 4em;
-  position: fixed;
-  overflow: hidden;
-  overflow-y: scroll;
   border-top-left-radius: 5px;
-  box-shadow: 0 0 15px rgba(0,0,0, .6);
-  top: .8em;
-  right: 0;
-  bottom: 0;
-  width: 76%;
+  border-top-right-radius: 5px;
+  box-shadow: 1px 2px 1px rgba(0, 0, 0, 0.4);
+  width: 100%;
   background: #eeeeee;
-}
-
-.main::-webkit-scrollbar {
-  -webkit-appearance: none;
-  background-color: rgba(0,0,0, .15);
-  width: 8px;
-  height: 8px;
-}
-
-.main::-webkit-scrollbar-thumb {
-  border-radius: 0;
-  background-color: rgba(0,0,0, .4);
-}
-
-.nav-collapse {
-  position: absolute;
-  width: 24%;
-  top: 2em;
-  left: 0;
-}
-
-.nav-collapse ul {
-  display: block;
-  width: 100%;
-  list-style: none;
-}
-
-.nav-collapse li {
-  width: 100%;
-  display: block;
-}
-
-.nav-collapse a {
-  color: #000;
-  background-color: #fff;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: background .3s ease;
-  -moz-transition: background .3s ease;
-  transition: background .3s ease;
-  text-shadow: 0 -1px rgba(0,0,0, .5);
-  border-bottom: 1px solid rgba(0,0,0, .2);
-  border-top: 1px solid rgba(255,255,255, .1);
-  display: block;
-  padding: .6em 2em;
-  width: 100%;
-}
-
-.nav-collapse a:hover { background: rgba(255,255,255, .1) }
-.nav-collapse .active a { color: #fff; background: #eeeeee }
-.nav-collapse li:first-child a { border-top: 0 }
-.nav-collapse li:last-child a { border-bottom: 0 }
-.nav-toggle { display: none }
-
-@media screen and (max-width: 40em) {
-  .js .nav-collapse {
-    clip: rect(0 0 0 0);
-    max-height: 0;
-    position: absolute;
-    display: block;
-    overflow: hidden;
-  }
-  .nav-collapse {
-    top: 0;
-    width: 100%;
-    position: relative;
-  }
-  .nav-collapse.opened { max-height: 9999px }
-  .nav-collapse a:hover { background: transparent }
-  .nav-collapse .active a:hover { color: #fff; background: #eeeeee }
-  .nav-toggle {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    text-decoration: none;
-    text-indent: -999px;
-    position: relative;
-    overflow: hidden;
-    width: 70px;
-    height: 55px;
-    float: right;
-    display: block;
-    margin: 0 -2em 1em 0;
-  }
-  .nav-toggle:before {
-    color: #444; /* Edit this to change the icon color */
-    font-family: "responsivenav";
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    font-size: 28px;
-    text-transform: none;
-    position: absolute;
-    content: "\2261";
-    text-indent: 0;
-    text-align: center;
-    line-height: 65px;
-    speak: none;
-    width: 100%;
-    top: 0;
-    left: 0;
-  }
-  .nav-toggle.active:before {
-    font-size: 24px;
-    content: "\78";
-  }
-  .main {
-    -webkit-overflow-scrolling: auto;
-    box-shadow: none;
-    padding: 0 2em 2em;
-    border-radius: 0;
-    position: relative;
-    width: 100%;
-    overflow: hidden;
-  }
-  .main::-webkit-scrollbar { background-color: transparent }
-}
-
-@media screen and (-webkit-min-device-pixel-ratio: 1.3), screen and (min--moz-device-pixel-ratio: 1.3), screen and (-o-min-device-pixel-ratio: 2 / 1), screen and (min-device-pixel-ratio: 1.3), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
-  body {
-    background-image: url("debut_dark_@2X.png");
-    -webkit-background-size: 200px 200px;
-    -moz-background-size: 200px 200px;
-    -o-background-size: 200px 200px;
-    background-size: 200px 200px;
-  }
-}
-
-@media screen and (min-width: 76em) {
-  .nav-collapse { width: 18em }
-  .main { width: auto; left: 18em }
-}
-
-.left-menu {
-  margin-left: 5px;
-}
-
-.modal-input-text {
-  width: 100%;
+  min-height: 95vh;
+  margin: 5px;
+  padding: 5px;
 }
 
 .css-form input {
