--- a/src/app/heaters/heaters.html
+++ b/src/app/heaters/heaters.html
@@ -2,12 +2,11 @@
     <h1 data-translate="heaters_title"></h1>
     
     <div class="row">
-        <div data-ng-repeat="heater in heatersCtrl.heaterList">
+        <div data-ng-repeat="heater in heatersCtrl.heaterList" class="col-sm-2" data-ng-if="heater.enabled || heatersCtrl.sagremorParams.adminMode">
             <data-sag-container data-menu="heatersCtrl.menuSensor"
                                 data-size="1"
                                 data-title="heater.display"
-                                data-element="heater"
-                                data-ng-if="heater.enabled || heatersCtrl.sagremorParams.adminMode">
+                                data-element="heater">
 				<data-sag-heater data-heater="heater"></data-sag-heater>
 			</data-sag-container>
         </div>
