--- a/src/app/sensors/sensors.html
+++ b/src/app/sensors/sensors.html
@@ -2,14 +2,13 @@
     <h1 data-translate="sensors_title"></h1>
 
     <div class="row">
-        <div data-ng-repeat="sensor in sensorsCtrl.sensorList">
+        <div data-ng-repeat="sensor in sensorsCtrl.sensorList" class="col-sm-2" data-ng-if="sensor.enabled || sensorsCtrl.sagremorParams.adminMode">
             <data-sag-container data-menu="sensorsCtrl.menuSensor"
                                 data-size="1"
                                 data-title="sensor.display"
-                                data-element="sensor"
-                                data-ng-if="sensor.enabled || sensorsCtrl.sagremorParams.adminMode">
-				<data-sag-sensor data-sensor="sensor"></data-sag-sensor>
-			</data-sag-container>
+                                data-element="sensor">
+                <data-sag-sensor data-sensor="sensor"></data-sag-sensor>
+            </data-sag-container>
         </div>
     </div>
 </div>
