--- a/src/components/container/container.template.html
+++ b/src/components/container/container.template.html
@@ -1,4 +1,4 @@
-<div class="sag-container container" data-ng-class="{'col-sm-2': $ctrl.size === 1, 'col-sm-3': $ctrl.size === 2, 'col-sm-4': $ctrl.size === 3}">
+<div class="sag-container">
 	<div class="row">
         <div class="sag-container-header-menu col-xs-2" data-uib-dropdown>
             <button class="btn btn-primary text-left" type="button" data-uib-dropdown-toggle>#</button>
