--- a/src/components/container/container.template.html
+++ b/src/components/container/container.template.html
@@ -1,17 +1,17 @@
 <div class="sag-container container" data-ng-class="{'col-sm-2': $ctrl.size === 1, 'col-sm-3': $ctrl.size === 2, 'col-sm-4': $ctrl.size === 3}">
 	<div class="row">
-        <div class="sag-container-header-menu col-sm-2" data-uib-dropdown>
+        <div class="sag-container-header-menu col-xs-2" data-uib-dropdown>
             <button class="btn btn-primary text-left" type="button" data-uib-dropdown-toggle>#</button>
             <ul data-uib-dropdown-menu>
                 <li data-ng-repeat="menuItem in $ctrl.menu"><a href="" data-ng-click="$ctrl.menuSelect(menuItem, $ctrl.element)" data-ng-bind="menuItem.display"></a></li>
             </ul>
         </div>
-        <div class="sag-container-header-title col-sm-10">
+        <div class="sag-container-header-title col-xs-10">
             <span data-ng-bind="$ctrl.title" class="text-center"></span>
         </div>
     </div>
 	<div class="row">
-        <div data-ng-transclude class="sag-container-element col-sm-12">
+        <div data-ng-transclude class="sag-container-element col-xs-12">
         </div>
     </div>
 </div>
