--- a/src/app/weather/weather.html
+++ b/src/app/weather/weather.html
@@ -12,7 +12,8 @@
 							data-menu="weatherCtrl.menuMock"
 							data-size="1"
 							data-title="mock.name"
-							data-element="mock">
+							data-element="mock"
+							class="col-sm-2">
 			<data-carleon-mock data-mock="mock"></data-carleon-mock>
 		</data-sag-container>
     </div>
