--- a/src/components/carleonMock/carleonMock.template.html
+++ b/src/components/carleonMock/carleonMock.template.html
@@ -12,7 +12,7 @@
 			param1
 		</div>
 		<div class="span6">
-			<input type="text" data-ng-model="$ctrl.param.param1">
+			<input type="text" data-ng-model="$ctrl.param.param1" size="4">
 		</div>
 	</div>
 	<div class="row">
@@ -20,7 +20,7 @@
 			param2
 		</div>
 		<div class="span6">
-			<input type="number" data-ng-model="$ctrl.param.param2">
+			<input type="number" data-ng-model="$ctrl.param.param2" style="width: 7em">
 		</div>
 	</div>
 	<div class="row">
@@ -28,8 +28,8 @@
 			param3
 		</div>
 		<div class="span6">
-			<input type="number" step="0.01" data-ng-model="$ctrl.param.param3">
+			<input type="number" step="0.01" data-ng-model="$ctrl.param.param3" style="width: 7em">
 		</div>
 	</div>
-	<button type="button" data-ng-click="$ctrl.command()">X</button>
+	<button type="button" data-ng-click="$ctrl.command()">Execute</button>
 </div>
