--- a/src/components/topLeftMenu/topLeftMenu.template.html
+++ b/src/components/topLeftMenu/topLeftMenu.template.html
@@ -82,7 +82,7 @@
             </a>
         </li>
         <li class="row">
-            <a href="" data-ng-click="angharadCtrl.logout()">
+            <a href="" data-ng-click="sagremorCtrl.logout()">
                 <i class="fa fa-sign-out"></i>
                 <span data-translate="menu_logout"></span>
             </a>
