--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,18 +1,18 @@
 <div class="container">
     <div class="container" data-ng-if="!isLogged">
         <form class="form-signin">
-            <h2 class="form-signin-heading">Please sign in</h2>
-            <label class="sr-only" for="inputEmail">Email address</label>
-            <input id="user" class="form-control" type="text" autofocus="" required="" placeholder="Email address" data-ng-model="LoginCtrl.username">
-            <label class="sr-only" for="inputPassword">Password</label>
+            <h2 class="form-signin-heading" data-translate="login_sign_in"></h2>
+            <label class="sr-only" for="inputLogin" data-translate="login_username"></label>
+            <input id="inputLogin" class="form-control" type="text" autofocus="" required="" placeholder="Email address" data-ng-model="LoginCtrl.username">
+            <label class="sr-only" for="inputPassword" data-translate="login_password"></label>
             <input id="password" class="form-control" type="password" required="" placeholder="Password" data-ng-model="LoginCtrl.password">
             <div class="checkbox">
                 <label>
                     <input type="checkbox" value="remember-me" data-ng-model="LoginCtrl.rememberMe">
-                    Remember me
+                    <span data-translate="login_remember"></span>
                 </label>
             </div>
-            <button class="btn btn-lg btn-primary btn-block" type="submit" data-ng-click="LoginCtrl.postLogin()">Sign in</button>
+            <button class="btn btn-lg btn-primary btn-block" type="submit" data-ng-click="LoginCtrl.postLogin()" data-translate="login_validate"></button>
         </form>
     </div>
 </div>
