Current pfofile add to dashboard WIP

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -19,7 +19,8 @@
                      data-on-item-removed="DashboardCtrl.onItemRemoved(w)"
                      data-sag-type="{{w.type}}"
                      data-sag-device="{{w.device}}"
-                     data-sag-name="{{w.name}}">
+                     data-sag-name="{{w.name}}"
+                     data-sag-uid="{{w.uid}}">
                     <div class="grid-stack-item-content">
                         <data-sag-container data-menu="DashboardCtrl.menu"
                                             data-size="1"
