--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -20,7 +20,8 @@
                      data-sag-type="{{w.type}}"
                      data-sag-device="{{w.device}}"
                      data-sag-name="{{w.name}}"
-                     data-sag-uid="{{w.uid}}">
+                     data-sag-uid="{{w.uid}}"
+                     data-sag-profile="{{w.profile}}">
                     <div class="grid-stack-item-content">
                         <data-sag-container data-menu="DashboardCtrl.menu"
                                             data-size="1"
